--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>DebAIt – Debate with AI</title>
+</head>
+<body>
+    <h1>DebAIt</h1>
+    <p>Debate with AI and learn from both sides.</p>
 
+    <h2>Start a Debate</h2>
+    <textarea placeholder="Type your debate topic here..." rows="5" cols="40"></textarea><br><br>
+    <button>Ask AI</button>
+
+    <h2>Current Debate Thread</h2>
+    <p><strong>Topic:</strong> Is social media more harmful than helpful?</p>
+
+    <h3>AI Response:</h3>
+    <p>
+        Social media can be harmful due to misinformation, comparison culture, and mental health
+        impacts, but it also allows for connection, education, and global awareness.
+    </p>
+
+    <h3>Replies</h3>
+    <ul>
+        <li>I agree — misinformation spreads too fast.</li>
+        <li>But it also helps people share important topics.</li>
+    </ul>
+
+    <textarea placeholder="Add your reply..." rows="3" cols="35"></textarea><br><br>
+    <button>Post Reply</button>
+</body>
+</html>
