--- a/index.html
+++ b/index.html
@@ -1,8 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <head>
     <meta charset="UTF-8">
     <title>DebAIt – Debate with AI</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f5f5f5;
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #2563eb;
+        }
+        textarea {
+            width: 100%;
+            padding: 8px;
+        }
+        button {
+            padding: 8px 16px;
+            background: #2563eb;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background: #1e4fc9;
+        }
+        .section {
+            background: white;
+            padding: 16px;
+            margin-top: 14px;
+            border-radius: 8px;
+        }
+    </style>
+</head>
+
 </head>
 <body>
     <h1>DebAIt</h1>
