--- a/index.html
+++ b/index.html
@@ -40,29 +40,40 @@
 
 </head>
 <body>
-    <h1>DebAIt</h1>
-    <p>Debate with AI and learn from both sides.</p>
+    <body>
+    <div class="section">
+        <h1>DebAIt</h1>
+        <p><em>Debate with AI — think critically, learn fairly.</em></p>
+    </div>
 
-    <h2>Start a Debate</h2>
-    <textarea placeholder="Type your debate topic here..." rows="5" cols="40"></textarea><br><br>
-    <button>Ask AI</button>
+    <div class="section">
+        <h2>Start a New Debate</h2>
+        <textarea placeholder="Example: Should college be free?" rows="5"></textarea><br><br>
+        <button>Ask AI</button>
+    </div>
 
-    <h2>Current Debate Thread</h2>
-    <p><strong>Topic:</strong> Is social media more harmful than helpful?</p>
+    <div class="section">
+        <h2>Current Debate</h2>
+        <p><strong>Topic:</strong> Is social media more harmful than helpful?</p>
 
-    <h3>AI Response:</h3>
-    <p>
-        Social media can be harmful due to misinformation, comparison culture, and mental health
-        impacts, but it also allows for connection, education, and global awareness.
-    </p>
+        <h3>AI's Position</h3>
+        <p>
+            Social media may be more harmful due to misinformation, comparison culture, and
+            mental health effects, although it still provides communication and educational benefits.
+        </p>
+    </div>
 
-    <h3>Replies</h3>
-    <ul>
-        <li>I agree — misinformation spreads too fast.</li>
-        <li>But it also helps people share important topics.</li>
-    </ul>
+    <div class="section">
+        <h3>Community Replies</h3>
+        <ul>
+            <li>I agree — misinformation spreads way too fast.</li>
+            <li>But marginalized voices can be heard using social platforms.</li>
+        </ul>
 
-    <textarea placeholder="Add your reply..." rows="3" cols="35"></textarea><br><br>
-    <button>Post Reply</button>
+        <textarea placeholder="Add your reply..." rows="3"></textarea><br><br>
+        <button>Post Reply</button>
+    </div>
+</body>
+
 </body>
 </html>
