--- a/index.html
+++ b/index.html
@@ -2,165 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DebAIt – Debate with AI</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        /* Basic page setup */
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-        }
-
-        body {
-            background: #f5f5f5;
-            color: #111827;
-        }
-
-        .page {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 16px;
-        }
-
-        /* Header + logo */
-        header {
-            margin-bottom: 16px;
-        }
-
-        .logo {
-            font-weight: 700;
-            font-size: 1.8rem;
-            letter-spacing: 0.05em;
-        }
-
-        .logo span {
-            color: #2563eb;
-        }
-
-        .tagline {
-            font-size: 0.9rem;
-            color: #6b7280;
-            margin-top: 4px;
-        }
-
-        /* Tabs navigation */
-        .tabs {
-            display: flex;
-            gap: 8px;
-            margin-top: 16px;
-            border-bottom: 1px solid #e5e7eb;
-            padding-bottom: 4px;
-            overflow-x: auto;
-        }
-
-        .tab {
-            padding: 8px 14px;
-            border-radius: 999px 999px 0 0;
-            text-decoration: none;
-            font-size: 0.9rem;
-            background: #e5e7eb;
-            color: #374151;
-            white-space: nowrap;
-        }
-
-        .tab:hover {
-            background: #d1d5db;
-        }
-
-        /* Home is “default active” visually */
-        .tab.home-tab {
-            background: #2563eb;
-            color: #ffffff;
-        }
-
-        /* Card sections */
-        .section-card {
-            background: #ffffff;
-            border-radius: 10px;
-            padding: 16px;
-            margin-top: 16px;
-            box-shadow: 0 1px 4px rgba(0,0,0,0.05);
-        }
-
-        .section-card h2 {
-            margin-bottom: 8px;
-            font-size: 1.1rem;
-        }
-
-        .section-card p {
-            margin-bottom: 6px;
-            font-size: 0.95rem;
-        }
-
-        textarea {
-            width: 100%;
-            min-height: 80px;
-            resize: vertical;
-            padding: 8px 10px;
-            border-radius: 8px;
-            border: 1px solid #d4d4d8;
-            margin-top: 8px;
-        }
-
-        button {
-            margin-top: 8px;
-            padding: 8px 14px;
-            border-radius: 999px;
-            border: none;
-            cursor: pointer;
-            background: #2563eb;
-            color: #ffffff;
-            font-size: 0.9rem;
-        }
-
-        button:hover {
-            background: #1d4ed8;
-        }
-
-        ul {
-            margin-top: 6px;
-            padding-left: 18px;
-        }
-
-        ul li {
-            font-size: 0.9rem;
-            margin-bottom: 4px;
-        }
-
-        .small-text {
-            font-size: 0.85rem;
-            color: #6b7280;
-        }
-    </style>
+    <title>DebAIt – Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="page">
-    <!-- Top: Logo + tagline -->
     <header>
         <div class="logo">DebA<span>It</span></div>
         <div class="tagline">Debate with AI. Practice critical thinking. See both sides.</div>
 
-        <!-- Tabs (these jump to sections on the page) -->
         <nav class="tabs">
-            <a href="#home" class="tab home-tab">Home</a>
-            <a href="#start-debate" class="tab">Start Debate</a>
-            <a href="#explore" class="tab">Explore Debates</a>
-            <a href="#about" class="tab">About</a>
+            <a href="index.html" class="tab active">Home</a>
+            <a href="start.html" class="tab">Start Debate</a>
+            <a href="explore.html" class="tab">Explore Debates</a>
+            <a href="about.html" class="tab">About</a>
         </nav>
     </header>
 
-    <!-- HOME SECTION -->
-    <section id="home" class="section-card">
+    <section class="section-card">
         <h2>Welcome to DebAIt</h2>
         <p>
             DebAIt is a simple web app where you can debate with an AI, explore arguments
             on both sides of an issue, and see what other users think.
         </p>
-        <p>
-            Use the tabs above to:
-        </p>
+        <p>Use the navigation above to explore:</p>
         <ul>
             <li><strong>Start Debate</strong> – ask a question or choose a topic</li>
             <li><strong>Explore Debates</strong> – browse example topics and arguments</li>
@@ -168,50 +33,6 @@
         </ul>
         <p class="small-text">
             This is just the front-end. Later, we can connect it to an AI backend (Flask, Node, etc.).
-        </p>
-    </section>
-
-    <!-- START DEBATE SECTION -->
-    <section id="start-debate" class="section-card">
-        <h2>Start a Debate</h2>
-        <p>Type a topic or question you want to debate with the AI.</p>
-        <textarea placeholder="Example: Should college be free for all students?"></textarea>
-        <button>Ask AI (coming soon)</button>
-        <p class="small-text">
-            In the future, this button will send your question to the AI and show a response below.
-        </p>
-    </section>
-
-    <!-- EXPLORE DEBATES SECTION -->
-    <section id="explore" class="section-card">
-        <h2>Explore Debates</h2>
-        <p>Sample topics you might include in your app:</p>
-        <ul>
-            <li>Is social media more harmful than helpful?</li>
-            <li>Should school uniforms be required?</li>
-            <li>Are AI tutors better than human tutors?</li>
-            <li>Should homework be banned?</li>
-        </ul>
-        <p class="small-text">
-            Later, you can turn this into a dynamic list from a database or API.
-        </p>
-    </section>
-
-    <!-- ABOUT SECTION -->
-    <section id="about" class="section-card">
-        <h2>About DebAIt</h2>
-        <p>
-            DebAIt is a project that lets students and users debate real topics with an AI.
-            The goal is not to “win” but to:
-        </p>
-        <ul>
-            <li>Practice building logical arguments</li>
-            <li>See different perspectives</li>
-            <li>Improve critical thinking skills</li>
-        </ul>
-        <p class="small-text">
-            You can update this section with your names, project description, and any requirements
-            from your class or assignment.
         </p>
     </section>
 </div>
