logo fix and explore upgrade

--- a/explore.html
+++ b/explore.html
@@ -20,18 +20,36 @@
     </header>
 
     <section class="section-card">
-        <h2>Explore Debates</h2>
-        <p>Sample topics you might include in your app:</p>
-        <ul>
-            <li>Is social media more harmful than helpful?</li>
-            <li>Should school uniforms be required?</li>
-            <li>Are AI tutors better than human tutors?</li>
-            <li>Should homework be banned?</li>
-        </ul>
-        <p class="small-text">
-            Later, you can turn this into a dynamic list from a database or API.
-        </p>
-    </section>
+    <h2>Explore Debate Topics</h2>
+    <p>Choose a topic to view arguments, pro & con points, and AI perspectives.</p>
+
+    <div class="topic-grid">
+        <div class="topic-card">
+            <h3>📱 Social Media Impact</h3>
+            <p>Is social media more harmful than helpful?</p>
+            <a href="#" class="topic-btn">View Debate</a>
+        </div>
+
+        <div class="topic-card">
+            <h3>🎓 College Tuition</h3>
+            <p>Should college education be free for everyone?</p>
+            <a href="#" class="topic-btn">View Debate</a>
+        </div>
+
+        <div class="topic-card">
+            <h3>🤖 AI in Education</h3>
+            <p>Are AI tutors better than human teachers?</p>
+            <a href="#" class="topic-btn">View Debate</a>
+        </div>
+
+        <div class="topic-card">
+            <h3>🏫 Homework Debate</h3>
+            <p>Should homework be removed from schools?</p>
+            <a href="#" class="topic-btn">View Debate</a>
+        </div>
+    </div>
+</section>
+
 </div>
 </body>
 </html>
