--- a/explore.html
+++ b/explore.html
@@ -8,7 +8,7 @@
 <body>
 <div class="page">
     <header>
-        <div class="logo">DebA<span>It</span></div>
+        <div class="logo">Deb<span>AI</span>t</div>
         <div class="tagline">Debate with AI. Practice critical thinking. See both sides.</div>
 
         <nav class="tabs">
@@ -25,25 +25,25 @@
 
     <div class="topic-grid">
         <div class="topic-card">
-            <h3>📱 Social Media Impact</h3>
+            <h3>Social Media Impact</h3>
             <p>Is social media more harmful than helpful?</p>
             <a href="#" class="topic-btn">View Debate</a>
         </div>
 
         <div class="topic-card">
-            <h3>🎓 College Tuition</h3>
+            <h3>College Tuition</h3>
             <p>Should college education be free for everyone?</p>
             <a href="#" class="topic-btn">View Debate</a>
         </div>
 
         <div class="topic-card">
-            <h3>🤖 AI in Education</h3>
+            <h3>AI in Education</h3>
             <p>Are AI tutors better than human teachers?</p>
             <a href="#" class="topic-btn">View Debate</a>
         </div>
 
         <div class="topic-card">
-            <h3>🏫 Homework Debate</h3>
+            <h3>Homework Debate</h3>
             <p>Should homework be removed from schools?</p>
             <a href="#" class="topic-btn">View Debate</a>
         </div>
