--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="page">
     <header>
-        <div class="logo">DebA<span>It</span></div>
+        <div class="logo">Deb<span>AI</span>t</div>
         <div class="tagline">Debate with AI. Practice critical thinking. See both sides.</div>
 
         <nav class="tabs">
