about section upgrade

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div class="hero-side">
             <h3>What can I do here?</h3>
             <ul>
-                <li>🧠 Practice building clear arguments and rebuttals</li>
-                <li>📚 Explore common debate topics with pros & cons</li>
-                <li>✍️ Draft responses you can use in class or assignments</li>
-                <li>🤝 Compare your thinking to AI-generated perspectives</li>
+                <li>Practice building clear arguments and rebuttals</li>
+                <li>Explore common debate topics with pros & cons</li>
+                <li>Draft responses you can use in class or assignments</li>
+                <li>Compare your thinking to AI-generated perspectives</li>
             </ul>
         </div>
     </section>
