--- a/about.html
+++ b/about.html
@@ -52,13 +52,10 @@
 
 <section class="section-card">
     <h2>Project Details</h2>
-    <p>
-        You can customize this section with your real information. For example:
-    </p>
     <ul>
         <li><strong>Course:</strong> CS 1200-001, Professor Klyne Smith, University of Texas at Dallas</li>
         <li><strong>Semester:</strong> Fall 2025</li>
-        <li><strong>Team members:</strong> Zedekiah Bradley (UI/UX), Johnson Vasquez Lopez (AI integration), Sachin Rana (Log in feature), ...</li>
+        <li><strong>Team members:</strong> Zedekiah Bradley (UI/UX), Johnson Vasquez Lopez (AI integration), Sachin Rana (Log in feature)</li>
     </ul>
 </section>
 
