--- a/explore.html
+++ b/explore.html
@@ -25,7 +25,7 @@
 
     <div class="topic-grid">
         <div class="topic-card">
-            <h3>📱 Social Media Impact</h3>
+            <h3>Social Media Impact</h3>
             <p>Is social media more harmful than helpful?</p>
             <a href="start.html?topic=Is%20social%20media%20more%20harmful%20than%20helpful%3F" class="topic-btn">
                 Start this debate
@@ -33,7 +33,7 @@
         </div>
 
         <div class="topic-card">
-            <h3>🎓 College Tuition</h3>
+            <h3>College Tuition</h3>
             <p>Should college education be free for everyone?</p>
             <a href="start.html?topic=Should%20college%20education%20be%20free%20for%20everyone%3F" class="topic-btn">
                 Start this debate
@@ -41,7 +41,7 @@
         </div>
 
         <div class="topic-card">
-            <h3>🤖 AI in Education</h3>
+            <h3>AI in Education</h3>
             <p>Are AI tutors better than human teachers?</p>
             <a href="start.html?topic=Are%20AI%20tutors%20better%20than%20human%20teachers%3F" class="topic-btn">
                 Start this debate
@@ -49,7 +49,7 @@
         </div>
 
         <div class="topic-card">
-            <h3>🏫 Homework Debate</h3>
+            <h3>Homework Debate</h3>
             <p>Should homework be removed from schools?</p>
             <a href="start.html?topic=Should%20homework%20be%20removed%20from%20schools%3F" class="topic-btn">
                 Start this debate
